--- a/src/main/webapp/WEB-INF/views/common/header.html
+++ b/src/main/webapp/WEB-INF/views/common/header.html
@@ -1,8 +1,9 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-    <head>
+    <head th:fragment="header(title)">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title th:text="${title}"></title>
         <!--<link rel="shortcut icon" href="#springUrl('/favicon.ico')">-->
         <link th:href="@{'/static/css/bootstrap.min.css'}" rel="stylesheet">
         <link th:href="@{'/static/font-awesome/css/font-awesome.css'}" rel="stylesheet">
