--- a/src/main/webapp/WEB-INF/static/css/style.css
+++ b/src/main/webapp/WEB-INF/static/css/style.css
@@ -4456,10 +4456,11 @@ body.mini-navbar.fixed-sidebar .logo-element {
 }
 .logo-name {
   color: #e6e6e6;
-  font-size: 180px;
+  font-size: 60px;
   font-weight: 800;
   letter-spacing: -10px;
   margin-bottom: 0;
+  text-align: center;
 }
 .middle-box h1 {
   font-size: 170px;
